--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="subheading mb-5">
             <a href="mailto:avicrafty8@gmail.com">avicrafty8@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">I am experienced in coding to provide a user-friendly sevice. We devolop evolve together in the new coming age.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/profile.php?id=100069108975300">
