--- a/index.html
+++ b/index.html
@@ -105,7 +105,19 @@
               <p>We make Os, software and projects. Our aim is to make good ui os. Our latest os is aerOS.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2023 - Present</span>
+              <span class="text-primary">March 2023 - July 2023</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Full stack Developer</h3>
+              <div class="subheading mb-3"></div>
+              <p>I make software and projects. My aim is to provide proper customer service.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">July 2023 - Present</span>
             </div>
           </div>
         </div>
