--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Full stack Developer</h3>
-              <div class="subheading mb-3"></div>
-              <p>I make software and projects. My aim is to provide proper customer service.</p>
+              <div class="subheading mb-3">Avian studios</div>
+              <p>We make software and projects. Our goal is to provide proper customer service.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2023 - Present</span>
