--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://twitter.com/Avian_studios">
+              <a href="https://www.reddit.com/user/Old_Fan_5288/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-reddit fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
