--- a/400.html
+++ b/400.html
@@ -168,7 +168,7 @@
 				<h1>Oops!</h1>
 				<h2>400 - Bad request</h2>
 			</div>
-			<a href="avian.is-a.dev">Go TO Homepage</a>
+			<a href="index.htmlv">Go TO Homepage</a>
 		</div>
 	</div>
 
