--- a/502.html
+++ b/502.html
@@ -168,7 +168,7 @@
 				<h1>Oops!</h1>
 				<h2>502 - Bad Gateway</h2>
 			</div>
-			<a href="avian.is-a.dev">Go TO Homepage</a>
+			<a href="index.html">Go TO Homepage</a>
 		</div>
 	</div>
 
