--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
               Place - National methopedia Arya collage Jaipur - 2023</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              1<sup>st</sup>
+              Place - National methopedia - 2024</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              6<sup>th</sup>
+              Place - International methopedia - 2022</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               4<sup>th</sup>
               Place - National methopedia Jaipur - 2016</li>
             <li>
