--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <p>We make software and projects. Our goal is to provide proper customer service.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2023 - Present</span>
+              <span class="text-primary">July 2023 - July 2025</span>
             </div>
           </div>
         </div>
